--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Probando</h1>
-
+    <h2>Holaaaa</h2>
     <script>
         var newButton = document.createElement("button")
     </script>
